FIX: Announce title of signup modal without modal.title
In some cases for modals, the title that should be used for
the aria-labelledby attribute is within the modal content and
not the discourse-modal-title title. This introduces a new
titleAriaElementId property to the d-modal component that is
then used by the create-account modal to read out the

" Welcome! Let's create your account"

title within the signup modal, when the aria dialog is announced.

--- a/app/assets/javascripts/discourse/app/templates/modal/create-account.hbs
+++ b/app/assets/javascripts/discourse/app/templates/modal/create-account.hbs
@@ -3,7 +3,7 @@
     {{plugin-outlet name="create-account-before-modal-body"}}
     {{#d-modal-body class=modalBodyClasses}}
       <div class="create-account-form">
-        <div class="login-welcome-header">
+        <div class="login-welcome-header" id="create-account-title">
           <h1 class="login-title">{{i18n "create_account.header_title"}}</h1> <img src={{wavingHandURL}} alt="" class="waving-hand">
           <p class="login-subheader">{{i18n "create_account.subheader_title"}}</p>
         </div>
