--- a/app/assets/javascripts/discourse/app/templates/modal/create-account.hbs
+++ b/app/assets/javascripts/discourse/app/templates/modal/create-account.hbs
@@ -22,7 +22,9 @@
                 </div>
               {{/if}}
               <div class="input-group create-account-email">
-                {{input type="email" disabled=emailDisabled value=accountEmail id="new-account-email" name="email" class=(value-entered accountEmail) autofocus="autofocus" focusOut=(action "checkEmailAvailability")}}
+                {{input type="email" disabled=emailDisabled value=accountEmail id="new-account-email"
+                  name="email" class=(value-entered accountEmail) autofocus="autofocus" focusOut=(action "checkEmailAvailability")
+                  aria-describedby="account-email-validation" aria-invalid=emailValidation.failed}}
                 <label class="alt-placeholder" for="new-account-email">
                   {{i18n "user.email.title"}}
                   {{~#if userFields~}}
@@ -34,8 +36,10 @@
               </div>
 
               <div class="input-group">
-                {{input value=accountUsername disabled=usernameDisabled class=(value-entered accountUsername) id="new-account-username" name="username" maxlength=maxUsernameLength
-                autocomplete="discourse"}}
+                {{input value=accountUsername disabled=usernameDisabled class=(value-entered accountUsername)
+                  id="new-account-username" name="username" maxlength=maxUsernameLength
+                  aria-describedby="username-validation" aria-invalid=usernameValidation.failed
+                  autocomplete="discourse"}}
                 <label class="alt-placeholder" for="new-account-username">
                   {{i18n "user.username.title"}}
                   {{~#if userFields~}}
@@ -49,7 +53,8 @@
 
               <div class="input-group">
                 {{#if fullnameRequired}}
-                  {{text-field disabled=nameDisabled value=accountName id="new-account-name" class=(value-entered accountName)}}
+                  {{text-field disabled=nameDisabled value=accountName id="new-account-name" class=(value-entered accountName)
+                  aria-describedby="fullname-validation" aria-invalid=nameValidation.failed}}
                   <label class="alt-placeholder" for="new-account-name">
                     {{i18n "user.name.title"}}
                     {{#if siteSettings.full_name_required}}
@@ -59,7 +64,7 @@
                     {{/if}}
                   </label>
 
-                  {{input-tip validation=nameValidation}}
+                  {{input-tip validation=nameValidation id="fullname-validation"}}
                   <span class="more-info">{{nameInstructions}}</span>
                 {{/if}}
               </div>
@@ -78,7 +83,10 @@
 
               <div class="input-group">
                 {{#if passwordRequired}}
-                  {{password-field value=accountPassword class=(value-entered accountPassword) type="password" id="new-account-password" autocomplete="current-password" capsLockOn=capsLockOn}}
+                  {{password-field value=accountPassword class=(value-entered accountPassword)
+                    type="password" id="new-account-password" autocomplete="current-password" capsLockOn=capsLockOn
+                    aria-describedby="password-validation"
+                    aria-invalid=passwordValidation.failed}}
                   <label class="alt-placeholder" for="new-account-password">
                     {{i18n "user.password.title"}}
                     {{~#if userFields~}}
@@ -86,7 +94,7 @@
                     {{/if}}
                   </label>
 
-                  {{input-tip validation=passwordValidation}}
+                  {{input-tip validation=passwordValidation id="password-validation"}}
                   <span class="more-info">{{passwordInstructions}}</span>
                   <div class="caps-lock-warning {{unless capsLockOn " hidden"}}">
                     {{d-icon "exclamation-triangle"}} {{i18n "login.caps_lock_warning"}}
