FIX: Make modal-alert an aria-live region
We need this to be a live region because we update it with error
messages that we want screen readers to read out. However, aria-live
regions cannot be hidden to start with, otherwise the reader does not
read out its content. I added a preventModalAlertHiding option to
d-modal-body to stop this hiding behaviour, and only used it in
the create-account modal for now.

This also required some changes to the create account modal styles
because the modal-alert is always visible.

--- a/app/assets/javascripts/discourse/app/templates/modal/create-account.hbs
+++ b/app/assets/javascripts/discourse/app/templates/modal/create-account.hbs
@@ -1,7 +1,7 @@
 {{#create-account email=accountEmail disabled=submitDisabled action=(action "createAccount")}}
   {{#unless complete}}
     {{plugin-outlet name="create-account-before-modal-body"}}
-    {{#d-modal-body class=modalBodyClasses}}
+    {{#d-modal-body class=modalBodyClasses preventModalAlertHiding=true}}
       <div class="create-account-form">
         <div class="login-welcome-header" id="create-account-title">
           <h1 class="login-title">{{i18n "create_account.header_title"}}</h1> <img src={{wavingHandURL}} alt="" class="waving-hand">
