--- a/app/assets/stylesheets/common/base/login.scss
+++ b/app/assets/stylesheets/common/base/login.scss
@@ -57,10 +57,9 @@
     width: 100%;
     max-width: 100%;
     margin-bottom: 0;
-    min-height: 35px;
-  }
-  #modal-alert:empty {
-    display: none;
+    min-height: 50px;
+    position: absolute;
+    z-index: z("modal", "tooltip");
   }
   .login-welcome-header {
     z-index: z("modal", "content");
