DEV: Change to sr_* prefix for screen reader translations
Also indent the create-account.hbs properly.

--- a/app/assets/javascripts/discourse/app/templates/modal/create-account.hbs
+++ b/app/assets/javascripts/discourse/app/templates/modal/create-account.hbs
@@ -17,9 +17,16 @@
                 </div>
               {{/if}}
               <div class="input-group create-account-email">
-                {{input type="email" disabled=emailDisabled value=accountEmail id="new-account-email"
-                  name="email" class=(value-entered accountEmail) autofocus="autofocus" focusOut=(action "checkEmailAvailability")
-                  aria-describedby="account-email-validation" aria-invalid=emailValidation.failed}}
+                {{input type="email"
+                        disabled=emailDisabled
+                        value=accountEmail
+                        id="new-account-email"
+                        name="email"
+                        class=(value-entered accountEmail)
+                        autofocus="autofocus"
+                        focusOut=(action "checkEmailAvailability")
+                        aria-describedby="account-email-validation"
+                        aria-invalid=emailValidation.failed}}
                 <label class="alt-placeholder" for="new-account-email">
                   {{i18n "user.email.title"}}
                   {{~#if userFields~}}
@@ -31,10 +38,15 @@
               </div>
 
               <div class="input-group">
-                {{input value=accountUsername disabled=usernameDisabled class=(value-entered accountUsername)
-                  id="new-account-username" name="username" maxlength=maxUsernameLength
-                  aria-describedby="username-validation" aria-invalid=usernameValidation.failed
-                  autocomplete="discourse"}}
+                {{input value=accountUsername
+                        disabled=usernameDisabled
+                        class=(value-entered accountUsername)
+                        id="new-account-username"
+                        name="username"
+                        maxlength=maxUsernameLength
+                        aria-describedby="username-validation"
+                        aria-invalid=usernameValidation.failed
+                        autocomplete="discourse"}}
                 <label class="alt-placeholder" for="new-account-username">
                   {{i18n "user.username.title"}}
                   {{~#if userFields~}}
@@ -48,8 +60,12 @@
 
               <div class="input-group">
                 {{#if fullnameRequired}}
-                  {{text-field disabled=nameDisabled value=accountName id="new-account-name" class=(value-entered accountName)
-                  aria-describedby="fullname-validation" aria-invalid=nameValidation.failed}}
+                  {{text-field disabled=nameDisabled
+                               value=accountName
+                               id="new-account-name"
+                               class=(value-entered accountName)
+                               aria-describedby="fullname-validation"
+                               aria-invalid=nameValidation.failed}}
                   <label class="alt-placeholder" for="new-account-name">
                     {{i18n "user.name.title"}}
                     {{#if siteSettings.full_name_required}}
@@ -65,23 +81,27 @@
               </div>
 
               {{plugin-outlet
-              name="create-account-before-password"
-                noTags=true
-                args=(hash
-                  accountName=accountName
-                  accountUsername=accountUsername
-                  accountPassword=accountPassword
-                  userFields=userFields
-                  authOptions=authOptions
-                )
+                  name="create-account-before-password"
+                  noTags=true
+                  args=(hash
+                    accountName=accountName
+                    accountUsername=accountUsername
+                    accountPassword=accountPassword
+                    userFields=userFields
+                    authOptions=authOptions
+                  )
               }}
 
               <div class="input-group">
                 {{#if passwordRequired}}
-                  {{password-field value=accountPassword class=(value-entered accountPassword)
-                    type="password" id="new-account-password" autocomplete="current-password" capsLockOn=capsLockOn
-                    aria-describedby="password-validation"
-                    aria-invalid=passwordValidation.failed}}
+                  {{password-field value=accountPassword
+                                   class=(value-entered accountPassword)
+                                   type="password"
+                                   id="new-account-password"
+                                   autocomplete="current-password"
+                                   capsLockOn=capsLockOn
+                                   aria-describedby="password-validation"
+                                   aria-invalid=passwordValidation.failed}}
                   <label class="alt-placeholder" for="new-account-password">
                     {{i18n "user.password.title"}}
                     {{~#if userFields~}}
