FIX: Use aria-role="alert" for modal-alert
The aria role="alert" is a live region with an implicit `aria-live` value of
"assertive" and an `aria-atomic` value of true. So, it is more appropriate
to use this and not just `aria-role="assertive"` on its own.

This commit also changes the d-modal-body.js code to not use jQuery, and
also fixes the style of the modal-error class to not rely on absolute
positioning, and instead height 0 with no overflow, which brings back
the show/hide effect we had previously while still allowing the
screen reader to read out the error text.

--- a/app/assets/stylesheets/common/base/login.scss
+++ b/app/assets/stylesheets/common/base/login.scss
@@ -57,9 +57,13 @@
     width: 100%;
     max-width: 100%;
     margin-bottom: 0;
-    min-height: 50px;
-    position: absolute;
-    z-index: z("modal", "tooltip");
+    min-height: 35px;
+  }
+  #modal-alert:empty {
+    min-height: 0px;
+    padding: 0px;
+    overflow: hidden;
+    display: inline;
   }
   .login-welcome-header {
     z-index: z("modal", "content");
