--- a/app/assets/javascripts/discourse/app/templates/components/d-modal.hbs
+++ b/app/assets/javascripts/discourse/app/templates/components/d-modal.hbs
@@ -30,7 +30,7 @@
         {{/if}}
       </div>
 
-      <div id="modal-alert" aria-live="assertive"></div>
+      <div id="modal-alert" role="alert"></div>
 
       {{yield}}
 
