--- a/app/assets/stylesheets/common/base/search-menu.scss
+++ b/app/assets/stylesheets/common/base/search-menu.scss
@@ -21,9 +21,24 @@ $search-pad-horizontal: 0.5em;
 
   .search-input {
     position: relative;
-    padding: $search-pad-vertical 0.1em;
+    margin: 1px;
     display: flex;
     align-items: center;
+    border: 1px solid var(--primary-medium);
+    input#search-term {
+      border-width: 0;
+      margin-bottom: 0;
+      &:focus {
+        outline: none;
+      }
+    }
+
+    .btn {
+      margin-left: 1px;
+    }
+    &:focus-within {
+      @include default-focus;
+    }
   }
 
   .heading {
@@ -243,7 +258,7 @@ $search-pad-horizontal: 0.5em;
 
   .searching {
     position: absolute;
-    top: $search-pad-vertical + 0.4em;
+    top: $search-pad-vertical + 0.2em;
     right: $search-pad-horizontal;
     min-height: 20px;
 
