--- a/app/assets/stylesheets/common/base/topic.scss
+++ b/app/assets/stylesheets/common/base/topic.scss
@@ -64,13 +64,12 @@
         position: relative;
       }
     }
-  }
-}
 
-@media screen and (max-width: 924px) {
-  .post-stream {
-    // make space for the topic progress bar to dock
-    padding-bottom: 2em;
+    .topic-navigation {
+      // span all columns of grid layout
+      // so RTL can go as far left as possible
+      grid-column: 1/-1;
+    }
   }
 }
 
@@ -91,8 +90,14 @@
 }
 
 #topic-progress-wrapper {
+  position: fixed;
+  bottom: 0px;
+  transition: bottom 0.1s, margin-bottom 0.1s;
+  right: 10px;
+  margin: 0 auto;
   display: flex;
-  right: 9px; // 8px padding on #main-outlet + 1px right border
+  justify-content: flex-end;
+  z-index: z("timeline");
   .topic-admin-menu-button-container {
     display: flex;
     > span {
@@ -109,11 +114,21 @@
       0
     ); // iOS11 Rendering bug https://meta.discourse.org/t/wrench-menu-not-disappearing-on-ios/94297
   }
-}
 
-#topic-progress-wrapper.docked {
-  .topic-admin-popup-menu.right-side {
-    bottom: -150px; // Prevents menu from being too high when a topic is very short
+  &.docked {
+    position: initial;
+    margin-top: 0.5em;
+    .topic-admin-popup-menu.right-side {
+      bottom: -150px; // Prevents menu from being too high when a topic is very short
+    }
+  }
+
+  html.rtl & {
+    justify-content: flex-start;
+  }
+
+  body:not(.footer-nav-visible) & {
+    bottom: env(safe-area-inset-bottom);
   }
 }
 
