--- a/app/assets/javascripts/discourse/app/templates/discovery/topics.hbs
+++ b/app/assets/javascripts/discourse/app/templates/discovery/topics.hbs
@@ -18,7 +18,7 @@ model=model showResetNew=showResetNew showDismissRead=showDismissRead resetNew=(
 
 {{#discovery-topics-list
   model=model
-  refresh=(action "refresh")
+  refresh=(action "triggerRefresh")
   incomingCount=topicTrackingState.incomingCount
   autoAddTopicsToBulkSelect=autoAddTopicsToBulkSelect
   bulkSelectEnabled=bulkSelectEnabled
@@ -53,7 +53,7 @@ model=model showResetNew=showResetNew showDismissRead=showDismissRead resetNew=(
       order=order
       ascending=ascending
       bulkSelectEnabled=bulkSelectEnabled
-      bulkSelectAction=(action "refresh")
+      bulkSelectAction=(action "triggerRefresh")
       selected=selected
       expandGloballyPinned=expandGloballyPinned
       expandAllPinned=expandAllPinned
